# cli-tui-starter

./: .gitattributes  AGENTS.md  CHANGELOG.md  CLONE_FEATURES.md  Cargo.toml  INCIDENTS.md  Makefile  PLAN.md  PRODUCT_ROADMAP.md  PROJECT_MEMORY.md  README.md  UPDATE.md
.github/workflows/: ci.yml
docs/: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  PROJECT.md  RELEASE.md  ROADMAP.md  SECURITY.md
src/: app.rs  cli.rs  config.rs  keys.rs  main.rs  terminal.rs  theme.rs  ui.rs
tests/: demo_no_tty_ascii_snapshots.rs  demo_no_tty_snapshots.rs  smoke.rs
tests/snapshots/: demo_120x24.txt  demo_120x24_ascii.txt  demo_60x18.txt  demo_60x18_ascii.txt  demo_80x24.txt  demo_80x24_ascii.txt
