[package]
name = "cli-tui-starter"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "Beautiful minimal TUI template with commands, themes, and accessibility."
repository = "https://github.com/sarveshkapre/cli-tui-starter"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.20", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
unicode-width = "0.1.11"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
